--- a/repl.ipynb
+++ b/repl.ipynb
@@ -15,9 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cs336_basics.tokenizer.bpe import train_bpe_tokenizer\n",
     "from cs336_basics.tokenizer.bpe_optim import train_bpe_tokenizer_optim\n",
-    "from cs336_basics.utils import save_pickle, load_pickle\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -162,7 +160,7 @@
     }
    ],
    "source": [
-    "with open(\"data/TinyStoriesV2-GPT4-valid.txt\", \"r\") as f:\n",
+    "with open(\"data/TinyStoriesV2-GPT4-valid.txt\") as f:\n",
     "    content = f.readlines()\n",
     "\n",
     "display(content[:10])\n",
@@ -210,7 +208,7 @@
     }
    ],
    "source": [
-    "type(\"hello! こんにちは!\".encode(\"utf-8\"))"
+    "type(\"hello! こんにちは!\".encode())"
    ]
   },
   {
@@ -666,7 +664,7 @@
     }
    ],
    "source": [
-    "\"\\ufffd\".encode(\"utf-8\") + \"hello\".encode(\"utf-8\")"
+    "\"\\ufffd\".encode() + b\"hello\""
    ]
   },
   {
@@ -697,7 +695,7 @@
     }
    ],
    "source": [
-    "(b\"\\ufffd\" + \"hello\".encode(\"utf-8\")).decode(\"utf-8\", errors=\"replace\")"
+    "(b\"\\ufffd\" + b\"hello\").decode(\"utf-8\", errors=\"replace\")"
    ]
   },
   {
@@ -754,7 +752,7 @@
     "from collections import Counter\n",
     "\n",
     "c = Counter()\n",
-    "c[tuple(b.to_bytes() for b in \"hello\".encode(\"utf-8\"))] += 1\n",
+    "c[tuple(b.to_bytes() for b in b\"hello\")] += 1\n",
     "c\n",
     "\n",
     "pair = max(c.items(), key=lambda x: (x[1], x[0]))[0]\n",
@@ -801,7 +799,7 @@
     }
    ],
    "source": [
-    "bytes((104))"
+    "bytes(104)"
    ]
   },
   {
