--- a/repl.ipynb
+++ b/repl.ipynb
@@ -647,7 +647,11 @@
    "source": [
     "uv run cs336_basics/tokenizer/preprocess.py --data_path=data/TinyStoriesV2-GPT4-train.txt \\\n",
     "    --pretrained_filepath=data/published/TinyStoriesV2-GPT4-train-bpe.pkl \\\n",
-    "    --output_path=data/TinyStoriesV2-GPT4/train.npy"
+    "    --output_path=data/TinyStoriesV2-GPT4/train.npy\n",
+    "\n",
+    "uv run cs336_basics/tokenizer/preprocess.py --data_path=data/owt_train.txt \\\n",
+    "    --pretrained_filepath=data/published/owt_train-bpe.pkl \\\n",
+    "    --output_path=data/owt/train.npy"
    ]
   },
   {
@@ -1371,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b3fb7da5",
    "metadata": {},
    "outputs": [
@@ -1390,7 +1394,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/home/yanlin_chen/repos/learn/assignment1-basics/wandb/run-20250708_031222-t1vwyz4h</code>"
+       "Run data is saved locally in <code>/home/yanlin_chen/repos/learn/assignment1-basics/wandb/run-20250708_031238-z8xs3saq</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1402,7 +1406,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/yanlinyc-thatcher/cs336/runs/t1vwyz4h' target=\"_blank\">train-test</a></strong> to <a href='https://wandb.ai/yanlinyc-thatcher/cs336' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+       "Syncing run <strong><a href='https://wandb.ai/yanlinyc-thatcher/cs336/runs/z8xs3saq' target=\"_blank\">train-test</a></strong> to <a href='https://wandb.ai/yanlinyc-thatcher/cs336' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1426,7 +1430,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/yanlinyc-thatcher/cs336/runs/t1vwyz4h' target=\"_blank\">https://wandb.ai/yanlinyc-thatcher/cs336/runs/t1vwyz4h</a>"
+       " View run at <a href='https://wandb.ai/yanlinyc-thatcher/cs336/runs/z8xs3saq' target=\"_blank\">https://wandb.ai/yanlinyc-thatcher/cs336/runs/z8xs3saq</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1448,7 +1452,7 @@
     {
      "data": {
       "text/html": [
-       " View run <strong style=\"color:#cdcd00\">train-test</strong> at: <a href='https://wandb.ai/yanlinyc-thatcher/cs336/runs/t1vwyz4h' target=\"_blank\">https://wandb.ai/yanlinyc-thatcher/cs336/runs/t1vwyz4h</a><br> View project at: <a href='https://wandb.ai/yanlinyc-thatcher/cs336' target=\"_blank\">https://wandb.ai/yanlinyc-thatcher/cs336</a><br>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+       "<br>    <style><br>        .wandb-row {<br>            display: flex;<br>            flex-direction: row;<br>            flex-wrap: wrap;<br>            justify-content: flex-start;<br>            width: 100%;<br>        }<br>        .wandb-col {<br>            display: flex;<br>            flex-direction: column;<br>            flex-basis: 100%;<br>            flex: 1;<br>            padding: 10px;<br>        }<br>    </style><br><div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>accuracy</td><td>▁</td></tr><tr><td>loss</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>accuracy</td><td>0.8</td></tr><tr><td>loss</td><td>0.5</td></tr></table><br/></div></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1460,7 +1464,19 @@
     {
      "data": {
       "text/html": [
-       "Find logs at: <code>./wandb/run-20250708_031222-t1vwyz4h/logs</code>"
+       " View run <strong style=\"color:#cdcd00\">train-test</strong> at: <a href='https://wandb.ai/yanlinyc-thatcher/cs336/runs/z8xs3saq' target=\"_blank\">https://wandb.ai/yanlinyc-thatcher/cs336/runs/z8xs3saq</a><br> View project at: <a href='https://wandb.ai/yanlinyc-thatcher/cs336' target=\"_blank\">https://wandb.ai/yanlinyc-thatcher/cs336</a><br>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>./wandb/run-20250708_031238-z8xs3saq/logs</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
