passed mini train

--- a/repl.ipynb
+++ b/repl.ipynb
@@ -1000,6 +1000,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "daf73132",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating an instance of BaseClass with value: 10\n",
+      "Creating an instance of DerivedClass with value: 20\n",
+      "DerivedClass instance created with value: 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "class BaseClass:\n",
+    "    @classmethod\n",
+    "    def factory_method(cls, value):\n",
+    "        print(f\"Creating an instance of {cls.__name__} with value: {value}\")\n",
+    "        return cls(value)\n",
+    "\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "\n",
+    "\n",
+    "class DerivedClass(BaseClass):\n",
+    "    def __init__(self, value):\n",
+    "        super().__init__(value)\n",
+    "        print(f\"DerivedClass instance created with value: {self.value}\")\n",
+    "\n",
+    "\n",
+    "# Calling the class method through the base class\n",
+    "base_instance = BaseClass.factory_method(10)\n",
+    "\n",
+    "# Calling the inherited class method through the derived class\n",
+    "derived_instance = DerivedClass.factory_method(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "22f35a04",
    "metadata": {},
