--- a/repl.ipynb
+++ b/repl.ipynb
@@ -10,11 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9e5b10b2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "\n",
     "from cs336_basics.tokenizer.bpe import train_bpe_tokenizer\n",
     "from cs336_basics.tokenizer.bpe_optim import train_bpe_tokenizer_optim\n",
     "from cs336_basics.utils import save_pickle, load_pickle\n",
