--- a/repl.ipynb
+++ b/repl.ipynb
@@ -1418,6 +1418,139 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "286f5a25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40000.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "327_680_000 / 32 / 256"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d05aeb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5465963,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "validation_ds = np.load(\"data/sync/tokenized/TinyStoriesV2-GPT4/valid.npy\")\n",
+    "print(validation_ds.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4dbf9fbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "667.2318115234375"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validation_ds.shape[0] / 32 / 256"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "090c4d25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1638400,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "valid_small_ds = validation_ds[: 200 * 32 * 256]\n",
+    "print(valid_small_ds.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d779e937",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"data/sync/tokenized/TinyStoriesV2-GPT4/valid_small.npy\", valid_small_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5b4a3ea9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_ds = np.load(\"data/sync/tokenized/TinyStoriesV2-GPT4/valid_small.npy\")\n",
+    "assert test_ds.shape == valid_small_ds.shape, \"The saved and loaded datasets do not match!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ea3b300",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(541235478,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "66068.78393554688"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_ds = np.load(\"data/sync/tokenized/TinyStoriesV2-GPT4/train.npy\")\n",
+    "print(train_ds.shape)\n",
+    "train_ds.shape[0] / 32 / 256"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "b3fb7da5",
    "metadata": {},
@@ -1547,6 +1680,31 @@
     "wandb.log({\"loss\": 0.5, \"accuracy\": 0.8})\n",
     "\n",
     "wandb.finish()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2cd9128a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cuda')"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test\n",
+    "\n",
+    "import torch\n",
+    "\n",
+    "torch.device(\"cuda\")"
    ]
   }
  ],
