fix lr scheduler

--- a/repl.ipynb
+++ b/repl.ipynb
@@ -1706,6 +1706,16 @@
     "\n",
     "torch.device(\"cuda\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21f5c5cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = {\"key1\": 1, \"key2\": 2}"
+   ]
   }
  ],
  "metadata": {
